log
Thu 09 Mar 2023 03:41:07 PM UTC: 
 tests:  0|7
total_score: 0/70
3ef49b4
Thu 09 Mar 2023 04:18:04 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: ‘temp’ undeclared (first use in this function)
   18 |   temp = 0
      |   ^~~~
exercises.c:18:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:18:11: error: expected ‘;’ before ‘temp’
   18 |   temp = 0
      |           ^
      |           ;
   19 |   temp = a
      |   ~~~~     
Compilation failed
c400da4
